# 2DCollisionStudy

./: README.md
BoundaryObject/Math/: CMakeLists.txt  ConstVar.h
BoundaryObject/Math/CollisionArea/: CollisionArea.cpp  CollisionArea.h
BoundaryObject/Math/CollisionNormal/: CollisionNormal.cpp  CollisionNormal.h
BoundaryObject/Math/CollisionTest/: CollisionTest.cpp  CollisionTest.h  Zone.h
BoundaryObject/Math/Intersections/: StaticCollision.cpp  StaticCollision.h  StaticIntersection.cpp  StaticIntersection.h
BoundaryObject/Math/Primitives/: AABB2D.h  AABB2D.inl  HLine2D.h  HLine2D.inl  Line2D.h  Line2D.inl  Point2D.h  Point2D.inl  Ray2D.h  Ray2D.inl  Segment2D.h  Segment2D.inl  VLine2D.h  VLine2D.inl  Vector2D.h  Vector2D.inl
BoundaryObject/Math/StaticCollision/: StaticCollision.cpp  StaticCollision.h
BoundaryObject/Test/: CMakeLists.txt  TestUtility.h  main.cpp
BoundaryObject/Test/CollisionTests/: Collision2DTests1.cpp  CollisionTests.cpp  IntersectionTests.cpp  ZoneTests.cpp
BoundaryObject/Test/MathTests/: AABB2DTests.cpp  HLine2DTests.cpp  Line2DTests.cpp  Point2DTests.cpp  Ray2DTests.cpp  Segment2DTests.cpp  VLine2DTests.cpp  Vector2DTests.cpp
